indevidual object files for deploying ireceptor-turnkey using image-stream and deployment-config objects

--- a/scripts/ireceptor-api-imagestream.yaml
+++ b/scripts/ireceptor-api-imagestream.yaml
@@ -3,7 +3,11 @@ kind: ImageStream
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: ireceptor-api
+    app: ireceptor-api
+    app.kubernetes.io/component: ireceptor-api
+    app.kubernetes.io/instance: ireceptor-api
+    app.kubernetes.io/name: ireceptor-api
+    app.kubernetes.io/part-of: ireceptor-turnkey
   name: ireceptor-api
 spec:
   lookupPolicy:
